--- a/index.html
+++ b/index.html
@@ -384,6 +384,10 @@ function check(idx, choice) {
 
 init();
 </script>
+<footer id="footer" style="margin-top:30px; padding:15px; background:#6200ea; color:white; font-family:'Nunito', sans-serif; font-size:16px;">
+    © <span id="year"></span> Emmily Johanna Gonzalez Mejias - Bogotá
+</footer>
 
 </body>
 </html>
+
