--- a/index.html
+++ b/index.html
@@ -382,12 +382,21 @@ function check(idx, choice) {
     }
 }
 
+<script>
 init();
+
+// Mostrar año actual automáticamente
+const yearSpan = document.getElementById('year');
+const now = new Date();
+yearSpan.innerText = now.getFullYear();
 </script>
+
 <footer id="footer" style="margin-top:30px; padding:15px; background:#6200ea; color:white; font-family:'Nunito', sans-serif; font-size:16px;">
     © <span id="year"></span> Emmily Johanna Gonzalez Mejias - Bogotá
 </footer>
 
 </body>
 </html>
+
+
 
