--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             text-align: center;
             color: #2c3e50;
             overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         header {
@@ -105,6 +108,7 @@
             gap: 8px;
             max-width: 1200px;
             margin: auto;
+            flex: 1;
         }
 
         .cell {
@@ -179,7 +183,6 @@
             border: 3px solid #ddd;
         }
 
-        /* ESTILO DEL FOOTER SOLICITADO */
         footer {
             background: #333;
             color: #fff;
@@ -201,7 +204,6 @@
             font-size: 18px;
             letter-spacing: 1px;
         }
-        
     </style>
 </head>
 <body>
@@ -231,52 +233,36 @@
         <div>BOGOTÁ, COLOMBIA</div>
         <div id="auto-date"></div>
     </div>
-</footer>    
+</footer>   
 
 <script>
 const gameData = [];
-// --- BANCO DE PREGUNTAS AMPLIADO (V2) ---
+
 const a1_pool = [
-    {t: "Greetings", e: "¡Hola! Usamos 'Good morning' (mañana), 'Good afternoon' (tarde), 'Good evening' (noche al llegar) y 'Good night' (noche al irse).", q: "It's 8:00 AM, you say...", a: ["Good morning", "Good night", "Good afternoon"], c: 0, img:"Gemini_Generated_Image_wrln9uwrln9uwrln.png"
-},
+    {t: "Greetings", e: "¡Hola! Usamos 'Good morning', 'Good afternoon', 'Good evening' y 'Good night'.", q: "It's 8:00 AM, you say...", a: ["Good morning", "Good night", "Good afternoon"], c: 0, img:"Gemini_Generated_Image_wrln9uwrln9uwrln.png"},
     {t: "Verbo To Be", e: "I am, You are, He/She/It is, We are, They are.", q: "The dog ___ very big and brown.", a: ["am", "are", "is"], c: 2, img:"English-Pronouns.jpg"},
     {t: "Colores", e: "Red + Blue = Purple. Blue + Yellow = Green. Red + Yellow = Orange.", q: "Mixing Red and Blue gives you...", a: ["Green", "Purple", "Orange"], c: 1, img:"Gemini_Generated_Image_rzt5vsrzt5vsrzt5.png"},
-    {t: "School Objects", e: "Pencil (lápiz), Eraser (borrador), Ruler (regla), Backpack (mochila).", q: "You use an ___ to fix mistakes.", a: ["Eraser", "Pencil", "Ruler"], c: 0, img:"Gemini_Generated_Image_z6ly3lz6ly3lz6ly.png"},
-    {t: "Family", e: "Father's sister = Aunt. Mother's brother = Uncle. Aunt's son = Cousin.", q: "Your father's sister is your...", a: ["Uncle", "Aunt", "Cousin"], c: 1, img:src="Captura de pantalla_7-2-2026_192958_tse4.mm.bing.net.jpeg"},
+    {t: "School Objects", e: "Pencil (lápiz), Eraser (borrador), Ruler (regla).", q: "You use an ___ to fix mistakes.", a: ["Eraser", "Pencil", "Ruler"], c: 0, img:"Gemini_Generated_Image_z6ly3lz6ly3lz6ly.png"},
+    {t: "Family", e: "Father's sister = Aunt. Mother's brother = Uncle.", q: "Your father's sister is your...", a: ["Uncle", "Aunt", "Cousin"], c: 1, img:"Captura de pantalla_7-2-2026_192958_tse4.mm.bing.net.jpeg"},
     {t: "Numbers 1-20", e: "11 (eleven), 12 (twelve), 13 (thirteen), 15 (fifteen).", q: "What is 7 + 8?", a: ["Thirteen", "Fourteen", "Fifteen"], c: 2, img:"afb15585b6e797d5a7b7dc75403b48b9.jpg"},
-    {t: "Feelings", e: "Happy (feliz), Sad (triste), Angry (enojado), Thirsty (sediento).", q: "I won a prize! I am so ___!", a: ["Sad", "Tired", "Happy"], c: 2, img:"feelings.png"},
-    {t: "Animals", e: "Cow (vaca), Pig (cerdo), Chicken (pollo), Sheep (oveja).", q: "This animal gives us milk and says 'Moo'.", a: ["Pig", "Cow", "Chicken"], c: 1, img:"animals.png"},
-    {t: "The Weather", e: "Sunny (soleado), Rainy (lluvioso), Snowy (nieve), Windy (viento).", q: "Take an umbrella! It is ___ today.", a: ["Sunny", "Rainy", "Cloudy"], c: 1, img:"e40ff2c11aecddc3e89da335e16e2871.png"},
-    {t: "Professions", e: "Doctor (médico), Teacher (profe), Chef (cocinero), Pilot (piloto).", q: "A ___ cooks delicious food in a restaurant.", a: ["Chef", "Doctor", "Pilot"], c: 0, img:"professions.png"}
+    {t: "Feelings", e: "Happy (feliz), Sad (triste), Angry (enojado).", q: "I won a prize! I am so ___!", a: ["Sad", "Tired", "Happy"], c: 2, img:"feelings.png"},
+    {t: "Animals", e: "Cow (vaca), Pig (cerdo), Chicken (pollo).", q: "This animal gives us milk and says 'Moo'.", a: ["Pig", "Cow", "Chicken"], c: 1, img:"animals.png"},
+    {t: "The Weather", e: "Sunny (soleado), Rainy (lluvioso), Snowy (nieve).", q: "Take an umbrella! It is ___ today.", a: ["Sunny", "Rainy", "Cloudy"], c: 1, img:"e40ff2c11aecddc3e89da335e16e2871.png"},
+    {t: "Professions", e: "Doctor, Teacher, Chef, Pilot.", q: "A ___ cooks delicious food in a restaurant.", a: ["Chef", "Doctor", "Pilot"], c: 0, img:"professions.png"}
 ];
 
 const a2_pool = [
-    {t: "Past Simple", e: "Acciones terminadas. Verbos regulares: -ED (Watch -> Watched).", q: "Last night, I ___ a ghost story.", a: ["watch", "watched", "watching"], c: 1, img:"2e84570d-0a63-4def-9dfb-db2d31ccebaa.png"},
-    {t: "Comparatives", e: "Añadimos -ER than para comparar (Smaller than, Faster than).", q: "A plane is ___ than a car.", a: ["faster", "fastest", "fast"], c: 0, img:"Comparative-Adjectives-and-Irregular-Adjectives-Table-Examples-1024x894.jpg"},
-    {t: "Superlatives", e: "Usamos THE + -EST para el más grande/alto (The tallest).", q: "Mount Everest is ___ mountain.", a: ["the highest", "higher", "high"], c: 0, img:"superlatives.png"},
-    {t: "Prepositions", e: "In (dentro), On (sobre), Under (debajo), Between (entre).", q: "The letter B is ___ A and C.", a: ["next to", "behind", "between"], c: 2, img:"prepositions.png"},
-    {t: "Future 'Going to'", e: "Planes: Subject + verb To Be + going to + verb.", q: "Tomorrow, I ___ visit my grandma.", a: ["go to", "am going to", "going"], c: 1, img:"going to.png"},
-    {t: "Possessive 'S", e: "Indica posesión: 'Peter's dog' = el perro de Peter.", q: "This is my ___ car (The car of my brother).", a: ["brothers", "brother's", "brother"], c: 1, img:"possesives.png"},
-    {t: "Adverbs", e: "Describen la acción: Quickly (rápido), Slowly (lento).", q: "The turtle moves very ___.", a: ["slowly", "quickly", "happy"], c: 0, img:"adverbs.png"},
-    {t: "Body Parts", e: "Shoulders (hombros), Knees (rodillas), Toes (dedos del pie).", q: "You use your ___ to hear music.", a: ["Eyes", "Ears", "Mouth"], c: 1, img:"parts of body.png"},
-    {t: "Daily Routine", e: "Wake up (despertar), Brush teeth (lavar dientes), Go to bed.", q: "I ___ my teeth every morning.", a: ["wash", "brush", "clean"], c: 1, img:"daily routine.png"},
-    {t: "Food", e: "Vegetables: Carrots, Potatoes. Fruit: Apple, Banana, Grapes.", q: "Which one is a fruit?", a: ["Carrot", "Potato", "Apple"], c: 2, img:"food.png"},
+    {t: "Past Simple", e: "Acciones terminadas. Verbos regulares: -ED.", q: "Last night, I ___ a ghost story.", a: ["watch", "watched", "watching"], c: 1, img:"2e84570d-0a63-4def-9dfb-db2d31ccebaa.png"},
+    {t: "Comparatives", e: "Añadimos -ER than para comparar.", q: "A plane is ___ than a car.", a: ["faster", "fastest", "fast"], c: 0, img:"Comparative-Adjectives-and-Irregular-Adjectives-Table-Examples-1024x894.jpg"},
+    {t: "Prepositions", e: "In (dentro), On (sobre), Under (debajo).", q: "The letter B is ___ A and C.", a: ["next to", "behind", "between"], c: 2, img:"prepositions.png"}
 ];
 
 const b1_pool = [
-    {t: "Present Perfect", e: "Have/Has + Participio. Para experiencias (I have been to Paris).", q: "I ___ never seen a real tiger.", a: ["has", "do", "have"], c: 2, img:"present perfect.png"},
-    {t: "Modal: Should", e: "Consejos. 'You should eat healthy'.", q: "You look sick. You ___ see a doctor.", a: ["should", "mustn't", "would"], c: 0, img:"modal should.png"},
-    {t: "Passive Voice", e: "Object + To Be + Past Participle.", q: "The telephone ___ invented by Bell.", a: ["is", "were", "was"], c: 2, img:"passive voice.png"},
-    {t: "1st Conditional", e: "If + Present simple, Will + verb.", q: "If I study hard, I ___ the exam.", a: ["pass", "will pass", "passed"], c: 1, img:"1st conditional.png"},
-    {t: "Past Continuous", e: "Acción en progreso en el pasado: Was/Were + -ING.", q: "They ___ playing when it started to rain.", a: ["was", "were", "are"], c: 1, img:"past continuos.png"},
-    {t: "Relative Clauses", e: "Who (personas), Which (cosas), Where (lugares).", q: "A baker is a person ___ makes bread.", a: ["which", "where", "who"], c: 2, img:"relative clauses.png"},
-    {t: "Modal: Must", e: "Obligación o prohibición (Mustn't).", q: "You ___ touch the fire. It's dangerous!", a: ["mustn't", "should", "don't"], c: 0, img:"modal must.png"},
-    {t: "Used to", e: "Acciones que hacías antes pero ya no.", q: "I ___ play with dolls when I was 5.", a: ["use to", "used to", "am used to"], c: 1, img:"used to.png"},
-    {t: "Already / Yet", e: "Already (ya - afirmativo), Yet (aún - negativo/pregunta).", q: "I haven't finished my homework ___.", a: ["already", "just", "yet"], c: 2, img:"already yet.png"},
-    {t: "2nd Conditional", e: "Situaciones imaginarias: If + Past, Would + verb.", q: "If I won the lottery, I ___ buy a mansion.", a: ["will", "would", "did"], c: 1, img:"2nd conditional.png"}
+    {t: "Present Perfect", e: "Have/Has + Participio.", q: "I ___ never seen a real tiger.", a: ["has", "do", "have"], c: 2, img:"present perfect.png"},
+    {t: "Modal: Should", e: "Consejos. 'You should eat healthy'.", q: "You look sick. You ___ see a doctor.", a: ["should", "mustn't", "would"], c: 0, img:"modal should.png"}
 ];
 
-// Llenar las 60 casillas sin repetir secuencialmente
+// Llenar datos
 for(let i=1; i<=60; i++) {
     let lvl, color, data;
     if(i <= 20) {
@@ -297,6 +283,7 @@ let lives = 3;
 
 function init() {
     const board = document.getElementById('board-container');
+    board.innerHTML = "";
     gameData.forEach(item => {
         const d = document.createElement('div');
         d.className = `cell ${item.color}`;
@@ -305,11 +292,10 @@ function init() {
         board.appendChild(d);
     });
     updateLives();
-}
-// FECHA Y HORA AUTOMÁTICA
     const now = new Date();
     document.getElementById('auto-date').innerText = now.toLocaleString();
 }
+
 function updateLives() {
     document.getElementById('lives-container').innerText = "❤️".repeat(lives);
     if(lives <= 0) {
@@ -366,17 +352,7 @@ function showExplanation(idx) {
             <h3 style="font-size:24px; color:#2c3e50;">💡 Lección rápida:</h3>
             <p style="font-size:22px; line-height:1.5; color:#444;">${data.e}</p>
             <div style="text-align:center; margin-top:15px;">
-    <img 
-        src="img/${data.img}" 
-        alt="${data.t}" 
-        style=width:360px;
-    max-width:95%;
-    height:auto;
-    object-fit:contain;
-    border-radius:20px;
-    border:4px solid #ccc;
-    >
-
+                <img src="${data.img}" alt="${data.t}" style="width:360px; max-width:95%; height:auto; border-radius:20px; border:4px solid #ccc;">
             </div>
         </div>
         <button class="btn-dice" onclick="showQuestion(${idx})">¡ACEPTO EL RETO!</button>
@@ -416,13 +392,13 @@ function check(idx, choice) {
         location.reload();
     }
 }
+
+// Iniciar el juego
 init();
-<script>
+</script>
 
 </body>
 </html>
-
-
 
 
 
